--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
-name: Portfolio Deployment
+name: Sample application Deployment
 
 on:
   push:
     branches:
     - main
+    - b1
+    - master
 
 jobs:
   build-and-deploy:
@@ -20,4 +22,4 @@ jobs:
         aws-region: us-east-1
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync . s3://adrbsportfolio --delete
+      run: aws s3 sync . s3://githubactionbucket8853 --delete
